Personal info page added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Nombre - Portfolio Interactivo</title>
-    <meta name="description" content="Portfolio interactivo de Tu Nombre, desarrollador de videojuegos con Unreal Engine 5.">
+    <meta name="description" content="Portfolio interactivo de Enrique López Balbastre, desarrollador de videojuegos con Unreal Engine 5.">
     
     <!-- CSS Files -->
     <link rel="stylesheet" href="css/base.css">
@@ -36,8 +36,8 @@
     <main>
         <section id="hero">
             <div class="container">
-                <h1>Explora Hispania Romana</h1>
-                <p class="subtitle">Cada región representa un proyecto único ambientado en la península ibérica antigua</p>
+                <h1>Enrique López Balbastre</h1>
+                <p class="subtitle">Revisa mis proyectos en la península</p>
                 <div class="instructions">
                     <i class="fas fa-mouse-pointer"></i>
                     <span>Haz clic en cualquier región para explorar su proyecto histórico</span>
@@ -45,7 +45,7 @@
             </div>
         </section>
 
-        <section id="interactive-map">
+        <section id="mapa-interactivo">
             <div class="map-container">
                 <svg id="world-map" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
                     <!-- GALLAECIA (Noroeste - verde) -->
