--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="instructions">
                     <i class="fas fa-mouse-pointer"></i>
                     <!-- <span>Explora mis proyectos en el mapa interactivo de Hispania Romana</span> -->
-                    <span>Explore my projects in the interactive map of Roman Hispania</span>
+                    <a href="#mapa-interactivo"><span>Explore my projects in the interactive map of Roman Hispania</span></a>
                 </div>
             </div>
         </section>
